--- a/.github/workflows/test-linux-deb-pro-arm64.yml
+++ b/.github/workflows/test-linux-deb-pro-arm64.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04-arm
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Install dependencies for Linux
         run: |
@@ -53,8 +51,8 @@ jobs:
           rm -f "$(pwd)/linux/packaging/deb/make_config.yaml"
           mv "$(pwd)/linux/packaging/deb/make_config-pro.yaml" "$(pwd)/linux/packaging/deb/make_config.yaml"
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build deb
         run: |
