--- a/.github/workflows/test-windows-exe-pro-portable.yml
+++ b/.github/workflows/test-windows-exe-pro-portable.yml
@@ -16,8 +16,6 @@ jobs:
       build_number: ${{ steps.version_step.outputs.build_number }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Set version
         id: version_step
@@ -44,8 +42,6 @@ jobs:
       - get-version
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - uses: actions/setup-node@v4
         with:
@@ -78,10 +74,8 @@ jobs:
           Copy-Item -Path "$pwd\windows\pro\Runner.rc" -Destination "$pwd\windows\runner\Runner.rc" -Force
           Copy-Item -Path "$pwd\windows\pro\app_icon.ico" -Destination "$pwd\windows\runner\resources\app_icon.ico" -Force
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
-        with:
-          run-bootstrap: true
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build windows
         run: flutter build windows --dart-define-from-file=.env --target lib/main_pro.dart
