--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -8,7 +8,6 @@ permissions: read-all
 
 env:
   flutter-version: '3.32.4'
-  rust-version: '1.86.0'
 
 jobs:
   apk:
@@ -16,8 +15,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - uses: actions/setup-java@v4
         with:
@@ -39,18 +36,13 @@ jobs:
       - name: Add Android target
         run: rustup target add armv7-linux-androideabi
 
-      - name: Update the default toolchain version for Cargokit
-        run: sed -i -e "s/'stable'/'$RUST_VERSION'/" extensions/super_native_extensions/cargokit/build_tool/lib/src/builder.dart
-        env:
-          RUST_VERSION: ${{ env.rust-version }}
-
       - name: Configure .env
         run: echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Configure Keystore for Android
         run: |
