--- a/.github/workflows/test-linux-appimage-free.yml
+++ b/.github/workflows/test-linux-appimage-free.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Install dependencies for Linux
         run: |
@@ -52,8 +50,8 @@ jobs:
       - name: Remove unused files
         run: rm -f "$(pwd)/linux/packaging/appimage/make_config-pro.yaml"
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build AppImage
         run: |
