--- a/.github/workflows/test-linux-appimage-pro.yml
+++ b/.github/workflows/test-linux-appimage-pro.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Install dependencies for Linux
         run: |
@@ -59,8 +57,8 @@ jobs:
           rm -f "$(pwd)/linux/packaging/appimage/make_config.yaml"
           mv "$(pwd)/linux/packaging/appimage/make_config-pro.yaml" "$(pwd)/linux/packaging/appimage/make_config.yaml"
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build AppImage
         run: |
