--- a/.github/workflows/test-linux-rpm-free.yml
+++ b/.github/workflows/test-linux-rpm-free.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -53,8 +51,8 @@ jobs:
       - name: Update make_config.yaml
         run: rm -f "$(pwd)/linux/packaging/rpm/make_config-pro.yaml"
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build RPM
         run: |
