--- a/.github/workflows/test-linux-rpm-pro-arm64.yml
+++ b/.github/workflows/test-linux-rpm-pro-arm64.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04-arm
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - uses: actions/setup-java@v4
         with:
@@ -69,8 +67,8 @@ jobs:
           mv "$(pwd)/linux/packaging/rpm/make_config-pro.yaml" "$(pwd)/linux/packaging/rpm/make_config.yaml"
           yq -i '.build_arch = "aarch64"' linux/packaging/rpm/make_config.yaml
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build RPM
         run: |
