--- a/.github/workflows/test-linux-rpm-pro.yml
+++ b/.github/workflows/test-linux-rpm-pro.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -60,8 +58,8 @@ jobs:
           rm -f "$(pwd)/linux/packaging/rpm/make_config.yaml"
           mv "$(pwd)/linux/packaging/rpm/make_config-pro.yaml" "$(pwd)/linux/packaging/rpm/make_config.yaml"
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build RPM
         run: |
