--- a/.github/workflows/test-linux-tar-free-arm64.yml
+++ b/.github/workflows/test-linux-tar-free-arm64.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-22.04-arm
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Install dependencies for Linux
         run: |
@@ -41,8 +39,8 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build app
         run: |
