--- a/.github/workflows/test-macos-pkg-free.yml
+++ b/.github/workflows/test-macos-pkg-free.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -29,8 +27,8 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Resolving macos dependencies
         run: pod install --repo-update
