--- a/.github/workflows/test-windows-msi-free.yml
+++ b/.github/workflows/test-windows-msi-free.yml
@@ -16,8 +16,6 @@ jobs:
       build_number: ${{ steps.version_step.outputs.build_number }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Set version
         id: version_step
@@ -45,8 +43,6 @@ jobs:
       - get-version
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -79,10 +75,8 @@ jobs:
       - name: copy eula.rtf to the windows folder
         run: Copy-Item -Path "$pwd\macos\packaging\base\eula.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
-        with:
-          run-bootstrap: true
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build windows
         run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
