--- a/.github/workflows/test-windows-zip-pro-arm64.yml
+++ b/.github/workflows/test-windows-zip-pro-arm64.yml
@@ -14,8 +14,6 @@ jobs:
       Platform: arm64
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Setup Flutter
         shell: pwsh
@@ -45,10 +43,8 @@ jobs:
           Copy-Item -Path "$pwd\windows\pro\Runner.rc" -Destination "$pwd\windows\runner\Runner.rc" -Force
           Copy-Item -Path "$pwd\windows\pro\app_icon.ico" -Destination "$pwd\windows\runner\resources\app_icon.ico" -Force
 
-      - name: Setup Melos
-        uses: bluefireteam/melos-action@v3
-        with:
-          run-bootstrap: true
+      - name: Install Flutter dependencies
+        run: flutter pub get
 
       - name: Build zip
         shell: pwsh
