--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -388,6 +388,7 @@ jobs:
 
       - name: Build zip
         run: |
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
           fastforge package `
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
             --platform windows `
