--- a/.github/workflows/test-windows-exe-free-portable.yml
+++ b/.github/workflows/test-windows-exe-free-portable.yml
@@ -70,7 +70,9 @@ jobs:
         run: flutter pub get
 
       - name: Build windows
-        run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
+        run: |
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
+          flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install @insco/enigma-virtualbox
         run: npm i -g @insco/enigma-virtualbox
