--- a/.github/workflows/test-windows-exe-pro-arm64.yml
+++ b/.github/workflows/test-windows-exe-pro-arm64.yml
@@ -86,7 +86,8 @@ jobs:
       - name: Build exe
         shell: pwsh
         run: |
-          set FLUTTER_WINDOWS_PLATFORM="$env:Platform"
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
+          $env:FLUTTER_WINDOWS_PLATFORM = "$env:Platform"
           fastforge package `
             --skip-clean `
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" `
