--- a/.github/workflows/test-windows-exe-pro.yml
+++ b/.github/workflows/test-windows-exe-pro.yml
@@ -77,6 +77,7 @@ jobs:
       - name: Build exe
         shell: pwsh
         run: |
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
           fastforge package `
             --skip-clean `
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" `
