--- a/.github/workflows/test-windows-msix-pro.yml
+++ b/.github/workflows/test-windows-msix-pro.yml
@@ -110,7 +110,9 @@ jobs:
         run: flutter pub get
 
       - name: Build windows
-        run: flutter build windows --dart-define-from-file=.env --target lib/main_pro.dart
+        run: |
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
+          flutter build windows --dart-define-from-file=.env --target lib/main_pro.dart
 
       - name: Crate msix
         run: |
