--- a/.github/workflows/test-windows-portable-action.yml
+++ b/.github/workflows/test-windows-portable-action.yml
@@ -66,7 +66,9 @@ jobs:
         run: flutter pub get
 
       - name: Build windows
-        run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
+        run: |
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
+          flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Generate EnigmaVB config file
         id: test-action
