--- a/.github/workflows/test-windows-zip-pro.yml
+++ b/.github/workflows/test-windows-zip-pro.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Build zip
         shell: pwsh
         run: |
+          $env:SENTRY_NATIVE_BACKEND = "breakpad"
           fastforge package `
             --skip-clean `
             --flutter-build-args "dart-define-from-file=.env,target=lib/main_pro.dart" `
