--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,14 +49,14 @@ dependencies:
   menu_bar: ^0.5.3
   multi_image_picker_view: ^3.0.0
   package_info_plus: ^8.3.0
-  permission_handler: ^12.0.0+1
+  permission_handler: ^12.0.1
   photo_view: ^0.15.0
-  sentry_flutter: ^9.2.0
-  sentry_logging: ^9.2.0
+  sentry_flutter: ^9.3.0
+  sentry_logging: ^9.3.0
   shared_preferences: ^2.5.3
   slang_flutter: ^4.7.0
   super_drag_and_drop: ^0.9.1
-  syncfusion_flutter_sliders: ^30.1.37
+  syncfusion_flutter_sliders: ^30.1.38
   synchronized: ^3.4.0
   tray_manager: ^0.5.0
   url_launcher: ^6.3.1
