--- a/.github/workflows/test-linux-snapcraft-free-arm64.yml
+++ b/.github/workflows/test-linux-snapcraft-free-arm64.yml
@@ -59,11 +59,18 @@ jobs:
             "$(pwd)/snap/gui/picguard-pro.png" \
             "$(pwd)/snap/snapcraft-pro.yaml"
 
+      - name: Update snapcraft.yaml
+        run: |
+          VERSION="$VERSION_SHORT-dev.$BUILD_NUMBER" yq -i '.version = strenv(VERSION)' snap/snapcraft.yaml
+        env:
+          VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
+          BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
+
       - name: Build snap
         run: |
           # https://snapcraft.io/docs/flutter-applications
           echo "VERSION: $VERSION_SHORT.$BUILD_NUMBER"
-          sudo snapcraft --output "picguard-"$VERSION_SHORT.$BUILD_NUMBER"-linux-aarch64.snap"
+          sudo snapcraft --output "picguard-"$VERSION_SHORT.$BUILD_NUMBER.dev"-linux-aarch64.snap"
         env:
           VERSION_SHORT: ${{ steps.version_step.outputs.version_short }}
           BUILD_NUMBER: ${{ steps.version_step.outputs.build_number }}
