fix: update privacy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3918,6 +3918,7 @@ jobs:
           Copy-Item -Path "$pwd\windows\pro\main.cpp" -Destination "$pwd\windows\runner\main.cpp" -Force
           Copy-Item -Path "$pwd\windows\pro\Runner.rc" -Destination "$pwd\windows\runner\Runner.rc" -Force
           Copy-Item -Path "$pwd\windows\pro\app_icon.ico" -Destination "$pwd\windows\runner\resources\app_icon.ico" -Force
+          Copy-Item -Path "$pwd\windows\pro\LICENSE.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
           
           $yamlFile = ".\windows\packaging\exe\make_config.yaml"
           $yamlContent = Get-Content -Raw -Path $yamlFile
@@ -4173,6 +4174,7 @@ jobs:
           Copy-Item -Path "$pwd\windows\pro\main.cpp" -Destination "$pwd\windows\runner\main.cpp" -Force
           Copy-Item -Path "$pwd\windows\pro\Runner.rc" -Destination "$pwd\windows\runner\Runner.rc" -Force
           Copy-Item -Path "$pwd\windows\pro\app_icon.ico" -Destination "$pwd\windows\runner\resources\app_icon.ico" -Force
+          Copy-Item -Path "$pwd\windows\pro\LICENSE.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Install Flutter dependencies
         run: flutter pub get
@@ -4410,6 +4412,7 @@ jobs:
           Copy-Item -Path "windows\pro\CMakeLists.txt" -Destination "windows\CMakeLists.txt" -Force
           Copy-Item -Path "windows\pro\main.cpp" -Destination "windows\runner\main.cpp" -Force
           Copy-Item -Path "windows\pro\Runner.rc" -Destination "windows\runner\Runner.rc" -Force
+          Copy-Item -Path "$pwd\windows\pro\LICENSE.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
@@ -4604,6 +4607,7 @@ jobs:
           Copy-Item -Path "$pwd\windows\pro\main.cpp" -Destination "$pwd\windows\runner\main.cpp" -Force
           Copy-Item -Path "$pwd\windows\pro\Runner.rc" -Destination "$pwd\windows\runner\Runner.rc" -Force
           Copy-Item -Path "$pwd\windows\pro\app_icon.ico" -Destination "$pwd\windows\runner\resources\app_icon.ico" -Force
+          Copy-Item -Path "$pwd\windows\pro\LICENSE.rtf" -Destination "$pwd\windows\LICENSE.rtf" -Force
 
       - name: Install Flutter dependencies
         run: flutter pub get
