ci: update jobs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,8 +88,8 @@ jobs:
           TAG_NAME: ${{ steps.version_step.outputs.tag_name }}
           GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
 
-  gen-shasum:
-    name: Gen Shasum
+  publish:
+    name: Publish
     runs-on: ubuntu-22.04
     needs:
       - create-release
